# pulsar-client-rust

./: Cargo.toml  README.md  build.rs  wrapper.h
src/: authentication.rs  bindings.rs  c.rs  client.rs  error.rs  lib.rs  logger.rs  message.rs  producer.rs
