[package]
name = "pulsar-wrapper"
version = "0.1.0"
authors = ["Guilherme Perinazzo <gperinazzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
libc = "0.2"
futures = "0.3"


[build-dependencies]
bindgen = "0.50"

[dev-dependencies]
pretty_env_logger = "0.3"
tokio = { version = "0.2", features = ["full"] }
